crates/html_parser/tests/snapshots/test__basic_test_cases-3.snap
---
source: crates/html_parser/tests/test.rs
expression: "HtmlParser::new(\"<div></div>\").parse()"

---
{
  "html": {
    "Element": {
      "name": "fragment",
      "attributes": [],
      "children": [
        {
          "Element": {
            "name": "div",
            "attributes": [],
            "children": []
          }
        }
      ]
    }
  },
  "script": [],
  "style": []
}
