crates/html_parser/tests/snapshots/test__basic_test_cases-4.snap
---
source: crates/html_parser/tests/test.rs
expression: "HtmlParser::new(\"<div><div><h1></h1></div></div>\").parse()"

---
{
  "html": {
    "Element": {
      "name": "fragment",
      "attributes": [],
      "children": [
        {
          "Element": {
            "name": "div",
            "attributes": [],
            "children": [
              {
                "Element": {
                  "name": "div",
                  "attributes": [],
                  "children": [
                    {
                      "Element": {
                        "name": "h1",
                        "attributes": [],
                        "children": []
                      }
                    }
                  ]
                }
              }
            ]
          }
        }
      ]
    }
  },
  "script": [],
  "style": []
}
