crates/html_parser/tests/snapshots/test__basic_test_cases-7.snap
---
source: crates/html_parser/tests/test.rs
expression: "HtmlParser::new(\"<div><link href=\\\"https://www.google.com\\\" /></div>\").parse()"

---
{
  "Element": {
    "name": "fragment",
    "attributes": [],
    "children": [
      {
        "Element": {
          "name": "div",
          "attributes": [],
          "children": [
            {
              "Element": {
                "name": "link",
                "attributes": [
                  {
                    "name": "href",
                    "value": "https://www.google.com"
                  }
                ],
                "children": []
              }
            }
          ]
        }
      }
    ]
  }
}
