crates/html_parser/tests/snapshots/test__basic_test_cases-9.snap
---
source: crates/html_parser/tests/test.rs
expression: "HtmlParser::new(\"<style>.red { background-color: red; }</style>\").parse()"

---
{
  "Element": {
    "name": "fragment",
    "attributes": [],
    "children": [
      {
        "Style": {
          "attributes": [],
          "source": ".red { background-color: red; }"
        }
      }
    ]
  }
}
