crates/html_parser/tests/snapshots/test__basic_test_cases.snap
---
source: crates/html_parser/tests/test.rs
expression: "HtmlParser::new(\"abc\").parse()"

---
{
  "html": {
    "Element": {
      "name": "fragment",
      "attributes": [],
      "children": [
        {
          "Text": "abc"
        }
      ]
    }
  },
  "script": [],
  "style": []
}
